# Autosar_AP_SDC_Carla

./: .gitattributes  README.md
av-stack/: BUILD_AND_RUN.md  CMakeLists.txt  TEST_REPORT_2026-07-07.md  TEST_REPORT_2026-07-10.md  build_ap.sh  run_ap.sh
av-stack/config/: cyclonedds-peers.xml  zenoh-bridge-ros2dds-carla-jetson.json5  zenoh-bridge-ros2dds-carla-wsl.json5
av-stack/config/carla/: objects.json
av-stack/config/manifests/: av_execution_manifest.arxml  av_machine_manifest.arxml
av-stack/patches/: 0001-adaptive-autosar-fix-vector-deserialize-use-after-move.patch
av-stack/src/av_ap/include/av_ap/: ap.hpp  av_services.hpp
av-stack/src/av_common/include/av_common/: ap_main.hpp
av-stack/src/av_control/include/av_control/: control_app.hpp
av-stack/src/av_control/src/: control_app_main.cpp  control_node.cpp
av-stack/src/av_gateway/src/: carla_gateway_node.cpp
av-stack/src/av_localization/include/av_localization/: localization_app.hpp
av-stack/src/av_localization/src/: localization_app_main.cpp  localization_node.cpp
av-stack/src/av_perception/include/av_perception/: perception_app.hpp
av-stack/src/av_perception/src/: perception_app_main.cpp  perception_node.cpp
av-stack/src/av_planning/include/av_planning/: planning_app.hpp
av-stack/src/av_planning/src/: planning_app_main.cpp  planning_node.cpp
av-stack/tools/: route_keeper.py
patches/: add-carla_msgs.patch
